# brandflow

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  analytics.html  cc-connect-github.yaml  cc-connect-repo.yaml  check_environment.bat  config-example.yaml  dynamic_rules.txt  event-dialog.yaml  increment-detail.json  increment.json  index.html  kimi_two_stage_script.py  main_controller.py  overview.json  package-lock.json  pnpm-lock.yaml  prototype_version_display.html  pyproject.toml  requirements.txt  safe-test.sh  schedule.db  skills-lock.json  start_control_plane.bat  start_worker.bat  topics.json  videos.json  一键测试10条自动停止.bat  一键生成Kimi口播文案.bat  启动主控一键生产.bat  标题简介生成库设计.txt  脚本文案生成库设计.txt
.agents/: issues_scores.json
.claude/skills/: sqlite-database-expert  tailwindcss-development  typescript-react-reviewer
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  (+5 more)
.impeccable/: design.json
.playwright-cli/: page-2026-05-25T01-40-25-953Z.yml  page-2026-05-25T01-40-50-275Z.yml  page-2026-05-25T01-41-35-201Z.yml  page-2026-05-25T01-42-19-530Z.yml  page-2026-05-25T01-42-37-489Z.yml  page-2026-05-25T01-42-46-566Z.yml
001测试项目/: task_status.json
apps/: __init__.py
assets/: analytics-BSGwjvv6.js  analytics-Dff9Ex8b.js  client-D6pS15rs.js  main-BPTJt6uC.js  main-tOqf9Tvu.css
config/: app_config.example.json  app_config.json  catalog.json  defaults.yaml  providers.yaml
data/: metrics.db
docs/: version-registry.md
frontend/: analytics.html  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: recover_migration_jobs.py  run_tests.py
specs/: asset-library-ai-tts-stabilization.md
tests/: conftest.py  test_api_thumbnail.py  test_asset_migration.py  test_asset_product_filter.py  test_category_suggestion.py  test_metrics_api.py  test_metrics_import.py  test_metrics_increment.py  test_sync_version.py  test_update_bat.py  test_update_progress.py
tools/: build_segment_index.py  create_mock_project.py  deploy-analytics.sh  export_metrics_json.py  input_batch_direction.ps1  launcher_check.ps1  memleak_detect.py  memleak_isolate.py  prepare_local_tools.ps1  run_delivery_simulation.ps1  sync_version.py  validate_delivery.py
(+475 files in other folders)
