[project]
name = "ziyuantang-pipeline"
version = "0.1.0"
description = "Local short-video automation pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "openpyxl",
    "pillow",
    "pydantic>=2.13.4",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
