[project]
name = "ziyuantang-pipeline"
version = "0.3.5"
description = "Local short-video automation pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "openpyxl",
    "pillow",
    "pydantic>=2.13.4",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running tests",
    "e2e: end-to-end tests",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
