[project]
name = "brandflow-pipeline"
version = "0.7.1"
description = "Local short-video automation pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "openpyxl",
    "pillow",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.29",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running tests",
    "e2e: end-to-end tests",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
